@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-05-19T08:13:49Z",
+  "timestamp" : "2024-05-19T16:14:28Z",
   "count_outdated" : 205179,
   "uniques_outdated" : 2036,
-  "count" : 209441,
-  "uniques" : 2065,
+  "count" : 209531,
+  "uniques" : 2066,
   "clones" : [
     {
       "timestamp": "2024-05-05T00:00:00Z",
-      "count": 131,
-      "count_minmax": [ 112, 295 ],
-      "count_decinc": [ 164, 295 ],
+      "count": 40,
+      "count_minmax": [ 40, 295 ],
+      "count_decinc": [ 255, 295 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -133,12 +133,12 @@
     },
     {
       "timestamp": "2024-05-19T00:00:00Z",
-      "count": 113,
-      "count_minmax": [ 113, 113 ],
-      "count_decinc": [ 0, 113 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 203,
+      "count_minmax": [ 113, 203 ],
+      "count_decinc": [ 0, 203 ],
+      "uniques": 3,
+      "uniques_minmax": [ 2, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
