@@ -1,10 +1,10 @@
 {
-  "count": 4098,
-  "uniques": 6,
+  "count": 4097,
+  "uniques": 7,
   "clones": [
     {
       "timestamp": "2024-05-05T00:00:00Z",
-      "count": 131,
+      "count": 40,
       "uniques": 1
     },
     {
@@ -74,8 +74,8 @@
     },
     {
       "timestamp": "2024-05-19T00:00:00Z",
-      "count": 113,
-      "uniques": 2
+      "count": 203,
+      "uniques": 3
     }
   ]
 }
